@@ -72,7 +72,8 @@ int
 main(void)
 {
     struct rule rule = {
-        NULL, 0, NULL, NULL, NULL, NULL, NULL, 0, NULL, 0, 0, NULL, NULL, NULL
+        NULL, 0, NULL, NULL, NULL, NULL, NULL, 0, NULL, NULL, 0, 0, NULL,
+        NULL, NULL
     };
     const char *acls[5];
 
