@@ -12,6 +12,14 @@ remctl 3.12 (unreleased)
     limitations inherited from ssh and requires some setup to use.  See
     its manual page for more information.
 
+    Add a new configuration option, sudo, which tells remctld and
+    remctl-shell to run the command as a different user using sudo.  The
+    path to the sudo binary is determined when remctld is compiled.
+    Normally, it's more convenient to use the existing user option, but it
+    relies on remctld running as root.  If running the daemon as a
+    non-root user, or when running remctl-shell as a non-root user, this
+    option may work better.
+
 remctl 3.11 (2016-05-07)
 
     The PHP bindings have been ported to PHP 7, based on work by Nish
